--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,14 @@ spring.application.name=order-management-system
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# database
+spring.datasource.url=jdbc:postgresql://localhost:5432/kkp
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
+
+# flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
